Added project details pages for each featured project.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <span class="tag">Dashboard Visualization</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="btn">View Details</a>
+                        <a href="EduTrack.html" class="btn">View Details</a>
                         <a href="https://github.com/thotogelomankwe99/EduTrack.git" class="btn btn-outline">GitHub</a>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                             <span class="tag">Typography</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn">View Details</a>
+                            <a href="DigitalNewspaper.html" class="btn">View Details</a>
                             <a href="https://github.com/RoseMelato/Digital-Newspaper.git" class="btn btn-outline">GitHub</a>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                             <span class="tag">Hackathon</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn">View Details</a>
+                            <a href="PhishieldAI.html" class="btn">View Details</a>
                             <a href="https://github.com/thotogelomankwe99/PhishShieldAI.git" class="btn btn-outline">GitHub</a>
                         </div>
                     </div>
