--- a/index.html
+++ b/index.html
@@ -432,7 +432,10 @@
             </p>
         </div>
     </footer>
-
-   <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  emailjs.init("3CWBYjiky_rY-T2yX");
+</script>
+    <script src="script.js"></script>
 </body>
 </html>
