--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
             </p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-<script>
-  emailjs.init("3CWBYjiky_rY-T2yX");
+    <script type="JavaScript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script type="text/JavaScript">
+ (function(){emailjs.init("3CWBYjiky_rY-T2yX");})();
 </script>
     <script src="script.js"></script>
 </body>
