changed the color palette for the website, and fixed the toggle functionaltity

--- a/index.html
+++ b/index.html
@@ -127,33 +127,35 @@
                 </div>
             </div>
             
-            <div style="text-align: center; margin-top: 3rem;">
+            <div class="current-learning-focus">
                 <h3>Current Learning Focus</h3>
-                <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 1rem; margin-top: 1.5rem;">
-                    <div style="background: white; padding: 1rem; border-radius: var(--border-radius); box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
-                        <i class="fas fa-cogs" style="color: var(--primary); margin-right: 8px;"></i>
-                        <strong>ASP.NET Core</strong>
+                <p>
+                    Focused on building structured, backend-driven applications using C# and .NET, with an emphasis on clean architecture, data persistence, and maintainable code.
+                </p>
+                <div>
+                    <div>
+                        <i class="fas fa-cogs"></i>
+                        <strong>ASP.NET Core (MVC & Web APIs)</strong>
                     </div>
-                    <div style="background: white; padding: 1rem; border-radius: var(--border-radius); box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
-                        <i class="fas fa-database" style="color: var(--primary); margin-right: 8px;"></i>
-                        <strong>Entity Framework</strong>
+                    <div>
+                        <i class="fas fa-database"></i>
+                        <strong>Entity Framework & SQL (Relational Data)</strong>
                     </div>
-                    <div style="background: white; padding: 1rem; border-radius: var(--border-radius); box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
-                        <i class="fas fa-cloud" style="color: var(--primary); margin-right: 8px;"></i>
-                        <strong>Azure Fundamentals</strong>
+                    <div>
+                        <i class="fas fa-cloud"></i>
+                        <strong>Azure Fundamentals (Cloud Concepts)</strong>
                     </div>
-                    <div style="background: white; padding: 1rem; border-radius: var(--border-radius); box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
-                        <i class="fas fa-vial" style="color: var(--primary); margin-right: 8px;"></i>
-                        <strong>Unit Testing (xUnit)</strong>
+                    <div>
+                        <i class="fas fa-vial"></i>
+                        <strong>Unit Testing (xUnit) & Clean Code Practices</strong>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-        <div class="container">
+        </section>
+        
+        <!-- Projects Section -->
+         <section id="projects">
+            <div class="container">
             <div class="section-title">
                 <h2>Featured Projects</h2>
                 <p>Practical applications of my development skills</p>
@@ -162,7 +164,7 @@
             <!-- Featured Project - BuildNest -->
             <div class="featured-project project-card">
                 <div class="project-img1">
-                    <img src="Edutrack (2).png" alt="EduTrack Project">
+                    <img src="edutrack (2).png" alt="EduTrack Project">
                 </div>
                 <div class="featured-content">
                     <h3>EduTrack</h3>
