fixed the url for project image

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <!-- Featured Project - BuildNest -->
             <div class="featured-project project-card">
                 <div class="project-img1">
-                    <img src="edutrack (2).png" alt="EduTrack Project">
+                    <img src="edutrack.png" alt="EduTrack Project">
                 </div>
                 <div class="featured-content">
                     <h3>EduTrack</h3>
